# qhaway

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-note-2026-06-20-db-is-truth-tools-are-product.md  install-subcommand-behavior.md  qhaway-as-plugin-design.md
docs/defects/: 2026-06-20-tombstone-detection-exact-match.md
docs/superpowers/: 2026-06-28-claim-regrounding-at-recall-design.md
docs/superpowers/plans/: 2026-06-21-qhaway-mcp-spine.md  2026-06-22-qhaway-as-plugin.md  2026-06-25-qhaway-init.md
docs/superpowers/specs/: 2026-06-20-qhaway-corpus-findings.md  2026-06-20-qhaway-mvp-design.md  2026-06-20-qhaway-mvp-implementation-concerns.md  2026-06-20-qhaway-test-assumptions.md  2026-06-21-qhaway-mcp-spine-design-codex-feedback.md  2026-06-21-qhaway-mcp-spine-design-codex-fifth-followup.md  2026-06-21-qhaway-mcp-spine-design-codex-followup.md  2026-06-21-qhaway-mcp-spine-design-codex-fourth-followup.md  2026-06-21-qhaway-mcp-spine-design-codex-second-followup.md  2026-06-21-qhaway-mcp-spine-design-codex-third-followup.md  2026-06-21-qhaway-mcp-spine-design-feedback.md  2026-06-21-qhaway-mcp-spine-design-final-review.md  2026-06-21-qhaway-mcp-spine-design-review.md  2026-06-21-qhaway-mcp-spine-design-updated-review.md  2026-06-21-qhaway-mcp-spine-design.md  2026-06-21-qhaway-mcp-spine-review-findings.md  2026-06-25-qhaway-init-design.md  2026-06-29-supersedes-write-side-design.md
qhaway-plugin/: .mcp.json  README.md
qhaway-plugin/.claude-plugin/: plugin.json
qhaway-plugin/hooks/: hooks.json
qhaway-plugin/src/qhaway/: __init__.py  cli.py  model.py  server.py
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src/qhaway/: __init__.py  cli.py  model.py  parse.py  paths.py  project.py  reconcile.py  reground.py  server.py  setup.py
tests/: test_bin_launcher.py  test_claim_regrounding.py  test_cli_exit.py  test_cli_init.py  test_cli_reconcile_emit.py  test_cli_serve.py  test_cli_session.py  test_exit_sequence.py  test_first_touch_atomicity.py  test_heal_redirect_signature.py  test_lifecycle_integration.py  test_paths.py  test_plugin_manifest.py  test_qhaway.py  test_serve_regrounds_claim.py  test_setup.py  test_signature.py  test_version.py
